<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="@dimen/elevation_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <TextView
            android:id="@+id/tVOther_Info"
            android:textSize="@dimen/size_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity_OtherInfo"
            android:textColor="@color/letter"
            />
    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pasatiempos"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
             android:orientation="vertical">


            <LinearLayout
                android:id="@+id/ratings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/leer"
                    android:text="@string/leer"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star1"
                    style="?android:attr/starStyle"
                    android:tag="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star2"
                    style="?android:attr/starStyle"
                    android:tag="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star3"
                    style="?android:attr/starStyle"
                    android:tag="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star4"
                    style="?android:attr/starStyle"
                    android:tag="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star5"
                    style="?android:attr/starStyle"
                    android:tag="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratings1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/ratings1">

                <CheckBox
                    android:id="@+id/ver_tv"
                    android:text="@string/ver_tv"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star1.3"
                    style="?android:attr/starStyle"
                    android:tag="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star2.3"
                    style="?android:attr/starStyle"
                    android:tag="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star3.3"
                    style="?android:attr/starStyle"
                    android:tag="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star4.3"
                    style="?android:attr/starStyle"
                    android:tag="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star5.3"
                    style="?android:attr/starStyle"
                    android:tag="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratings2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/ratings1">

                <CheckBox
                    android:id="@+id/bailar"
                    android:text="@string/bailar"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star1.4"
                    style="?android:attr/starStyle"
                    android:tag="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star2.4"
                    style="?android:attr/starStyle"
                    android:tag="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star3.4"
                    style="?android:attr/starStyle"
                    android:tag="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star4.4"
                    style="?android:attr/starStyle"
                    android:tag="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star5.4"
                    style="?android:attr/starStyle"
                    android:tag="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratings3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/ratings1">

                <CheckBox
                    android:id="@+id/cantar"
                    android:text="@string/cantar"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star1.5"
                    style="?android:attr/starStyle"
                    android:tag="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star2.5"
                    style="?android:attr/starStyle"
                    android:tag="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star3.5"
                    style="?android:attr/starStyle"
                    android:tag="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star4.5"
                    style="?android:attr/starStyle"
                    android:tag="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star5.5"
                    style="?android:attr/starStyle"
                    android:tag="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ratings4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/ratings1">

                <CheckBox
                    android:id="@+id/nadar"
                    android:text="@string/nadar"
                    android:tag="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star1.6"
                    style="?android:attr/starStyle"
                    android:tag="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star2.6"
                    style="?android:attr/starStyle"
                    android:tag="3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star3.6"
                    style="?android:attr/starStyle"
                    android:tag="4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star4.6"
                    style="?android:attr/starStyle"
                    android:tag="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/star5.6"
                    style="?android:attr/starStyle"
                    android:tag="6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mostrar"
        android:id="@+id/btnMostrar"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:backgroundTint="@color/accent"
        android:textColor="@color/letter"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/informaci_n"
        android:id="@+id/tvInfo_contact"/>

</LinearLayout>